test/haskell2010/conformance/negative/constructor-operator-binding.hs
module Main where

x :*: y = x

main = 1
